objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOJ__c</fullName>
        <label>DOJ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>E_name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>E name</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Esal__c</fullName>
        <label>Esal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exp__c</fullName>
        <formula>( TODAY()  -  DOJ__c) /365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UKS1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UKS2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UKS3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRS1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRS2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRS3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFS1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFS2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFS3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAS1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAS2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAS3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>emp-{0000}</displayFormat>
        <label>Emp ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Duplication_of_Name</fullName>
        <active>true</active>
        <errorConditionFormula>E_name__c = VLOOKUP($ObjectType.Employee__c.Fields.E_name__c, $ObjectType.Employee__c.Fields.Name ,E_name__c )</errorConditionFormula>
        <errorDisplayField>E_name__c</errorDisplayField>
        <errorMessage>Duplicate Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Low_Salary</fullName>
        <active>true</active>
        <errorConditionFormula>Esal__c  &lt; 10000</errorConditionFormula>
        <errorDisplayField>Esal__c</errorDisplayField>
        <errorMessage>Salary fied is too Low</errorMessage>
    </validationRules>
</CustomObject>